--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,8 +9,13 @@
 
   <h2>1. GET 요청 (검색)</h2>
   <form action="/search" method="get">
-    <input type="text" name="q" placeholder="검색어 입력">
-    <button>검색</button>
+    <p>
+        <label>값 1 <input type="text" name="value1"></label>
+    </p>
+    <p>
+        <label>값 2 <input type="text" name="value2"></label>
+    </p>
+    <button type="submit">검색</button>
   </form>
 
   <h2>2. POST 요청 (댓글 작성)</h2>
